--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IFOOD-FIAP</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Poiret+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Semi+Condensed:wght@100;900&display=swap" rel="stylesheet"> 
 </head>
+
 <body>
     <header>
-        <a href="#" class="logo">GRUPO 23</a>
+        <a href="#" class="logo">GRUPO ⅩⅩⅠⅠⅠ </a>
         <ul>
             <li><a href="#" class="active">Início</a></li>
             <li><a href="#linkedin" id="btn2">Linkedin</a></li>
         </ul>
     </header>
     <section>
-        <a href="#sec" id="btn">↓ Enterprise Challenge ↓</a>
+        <a href="#sec" id="btn">Enterprise Challenge ↓</a>
         <img src="picturedelivery.svg"  id="img-delivery">
     </section>
     <div class="sec" id="sec">
