--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="#" class="logo">GRUPO ⅩⅩⅠⅠⅠ </a>
+        <a href="#" class="logo">𓃱GRUPO ⅩⅩⅠⅠⅠ </a>
         <ul>
             <li><a href="#" class="active">Início</a></li>
             <li><a href="#linkedin" id="btn2">Linkedin</a></li>
@@ -26,47 +26,13 @@
     </section>
     <div class="sec" id="sec">
         <h2>Modelo Lógico de dados</h2>
-        <p>	Lorem ipsum sagittis senectus habitant tristique at eros sollicitudin 
-            luctus mi, non ante molestie etiam vel at posuere neque. augue lectus maecenas 
-            torquent platea tincidunt venenatis inceptos consectetur nisi, massa pulvinar lacinia 
-            vitae non mi nec senectus fringilla, elit est aenean porttitor pretium congue dolor felis.
-             vitae morbi ullamcorper vulputate pulvinar consectetur nibh sapien eleifend phasellus,
-              platea amet cursus nullam imperdiet mattis
-              facilisis posuere aptent hendrerit, nisl ante malesuada fermentum hac primis nisi netus. 
-              cubilia fringilla tristique condimentum volutpat amet consequat turpis interdum habitasse, 
-              fames vestibulum pretium platea himenaeos augue euismod hendrerit, ut sociosqu cras laoreet tempus sem lobortis blandit.<br></br> Lorem ipsum sagittis senectus habitant tristique at eros sollicitudin 
-              luctus mi, non ante molestie etiam vel at posuere neque. augue lectus maecenas 
-              torquent platea tincidunt venenatis inceptos consectetur nisi, massa pulvinar lacinia 
-              vitae non mi nec senectus fringilla, elit est aenean porttitor pretium congue dolor felis.
-               vitae morbi ullamcorper vulputate pulvinar consectetur nibh sapien eleifend phasellus,
-                platea amet cursus nullam imperdiet mattis <br></br>Lorem ipsum sagittis senectus habitant tristique at eros sollicitudin 
-                luctus mi, non ante molestie etiam vel at posuere neque. augue lectus maecenas 
-                torquent platea tincidunt venenatis inceptos consectetur nisi, massa pulvinar lacinia 
-                vitae non mi nec senectus fringilla, elit est aenean porttitor pretium congue dolor felis.
-                 vitae morbi ullamcorper vulputate pulvinar consectetur nibh sapien eleifend phasellus,
-                  platea amet cursus nullam imperdiet mattis </p>
-        <h2>Script do modelo físico</h2>
-        <p>	Lorem ipsum sagittis senectus habitant tristique at eros sollicitudin 
-            luctus mi, non ante molestie etiam vel at posuere neque. augue lectus maecenas 
-            torquent platea tincidunt venenatis inceptos consectetur nisi, massa pulvinar lacinia 
-            vitae non mi nec senectus fringilla, elit est aenean porttitor pretium congue dolor felis.
-             vitae morbi ullamcorper vulputate pulvinar consectetur nibh sapien eleifend phasellus,
-              platea amet cursus nullam imperdiet mattis
-              facilisis posuere aptent hendrerit, nisl ante malesuada fermentum hac primis nisi netus. 
-              cubilia fringilla tristique condimentum volutpat amet consequat turpis interdum habitasse, 
-              fames vestibulum pretium platea himenaeos augue euismod hendrerit, ut sociosqu cras laoreet tempus sem lobortis blandit.<br></br> Lorem ipsum sagittis senectus habitant tristique at eros sollicitudin 
-              luctus mi, non ante molestie etiam vel at posuere neque. augue lectus maecenas 
-              torquent platea tincidunt venenatis inceptos consectetur nisi, massa pulvinar lacinia 
-              vitae non mi nec senectus fringilla, elit est aenean porttitor pretium congue dolor felis.
-               vitae morbi ullamcorper vulputate pulvinar consectetur nibh sapien eleifend phasellus,
-                platea amet cursus nullam imperdiet mattis <br></br>Lorem ipsum sagittis senectus habitant tristique at eros sollicitudin 
-                luctus mi, non ante molestie etiam vel at posuere neque. augue lectus maecenas 
-                torquent platea tincidunt venenatis inceptos consectetur nisi, massa pulvinar lacinia 
-                vitae non mi nec senectus fringilla, elit est aenean porttitor pretium congue dolor felis.
-                 vitae morbi ullamcorper vulputate pulvinar consectetur nibh sapien eleifend phasellus,
-                  platea amet cursus nullam imperdiet mattis </p>
+        <embed src="ifood_fisico.pdf" type="application/pdf" width="100%" height="100%" style="height: 400px; width: 800px;">
+            <h4><mark>↪ Abreviações</mark></h4>
+            <p> T_AV ➭ T_AVALIACAO<br></br> T_ENT ➭ T_ENTREGADOR <br></br> T_EMP ➭ T_EMPRESA <br></br> T_CL ➭ T_CLIENTE</p>
+            <h2>Script do modelo físico</h2>
+            <a href="SCRIPT.ddl" taget="_blank">◌ Download Script ◌</a>
         <h2>Insights</h2>
-        <h3>01 | Ranking </h3>
+        <h3>01 | ⁂ Ranking  </h3>
         <p>	Com a proposta de gerar insights para o Ifood, o ranking dos entregadores, 
             mostrado na modelagem de dados, ajudaria o ifood a reconhecer os entregadores mais engajados 
             na plataforma. O ranking seria de acordo com as estrelas dos entregadores e, a forma de desempate,
@@ -75,19 +41,19 @@
               A ideia seria dar prêmios como reconhecimento por todo o esforço e destaque e, criando um clima de motivação , contribuindo com a agenda da ONU de 2030,
                no objetivo de desenvolvimento sustentável 8,
              que fala sobre o trabalho decente e o crescimento econômico. </p>
-        <h3>02 | Mapeamento das regiões de acordo com os pedidos</h3>
+        <h3>02 | ⊹ Mapeamento das regiões de acordo com os pedidos</h3>
         <p>	As regiões receberiam uma classificação com base nos seus chamados (pedidos), podendo ser: verde (regiões com bastante pedidos), amarelo (regiões com pedidos moderados) e vermelho (regiões com pouquissimos pedidos), assim, seria possível visualizar a demanda por pedidos de cada região, fazendo com que os entregadores se deslocassem no mapa de acordo com a classificação. Essa função seria extremamente importante no Ifood exatamente pela forma que agilizaria as corridas, garantindo uma maior satisfação nos clientes (que teriam seus pedidos de uma forma mais rápida, já que o entregador estaria pela região) e para o ifood, que receberia menos reclamações e teria o valioso dado da região mais ativa na plataforma.
             Também seria possível visualizar as regiões onde há menos chamados, com esse dado, o Ifood poderia criar melhores formas de marketing para o local, tentando atrair mais clientes para a plataforma. </p>
-        <h3>03 | Caixa-corrida</h3>
+        <h3>03 | ❏ Caixa-corrida</h3>
         <p>	Uma caixa-corrida é o número de dias seguidos em que um entregador entra na plataforma para fazer deliverys. Quando faz uma entrega no aplicativo do Ifood, a sua caixa-corrida aumenta em 1 dia. Esse dado, além de auxiliar na elaboração do ranking, também mostra a estabilidade dos entregadores, podendo traçar estratégias de marketing para ter cada vez mais entregadores engajados diariamente.</p>
     </div>
     <div class="linkedin" id="linkedin">
     <h3>Linkedin <img src="icons8-linkedin.svg" id="linkedin-icon"></h3>
-    <br><a href="https://www.linkedin.com/in/victorhugodev/">Victor Hugo</a></br>
-    <br><a href="https://www.linkedin.com/in/caio-cmiranda/">Caio Miranda</a></br>
-    <br><a href="https://www.linkedin.com/in/isabellevictoria/">Isabelle Victoria</a></br>
-    <br><a href="https://www.linkedin.com/in/johnny-alexandre/">Johnny Alexandre</a></br>
-    <br><a href="https://www.linkedin.com/in/juliashizuko/">Julia Stamborovski</a></br>
+    <br><a href="https://www.linkedin.com/in/victorhugodev/" target="_blank" rel="noopener noreferrer">Victor Hugo</a></br>
+    <br><a href="https://www.linkedin.com/in/caio-cmiranda/" target="_blank" rel="noopener noreferrer">Caio Miranda</a></br>
+    <br><a href="https://www.linkedin.com/in/isabellevictoria/" target="_blank" rel="noopener noreferrer">Isabelle Victoria</a></br>
+    <br><a href="https://www.linkedin.com/in/johnny-alexandre/" target="_blank" rel="noopener noreferrer">Johnny Alexandre</a></br>
+    <br><a href="https://www.linkedin.com/in/juliashizuko/" target="_blank" rel="noopener noreferrer">Julia Stamborovski</a></br>
    
 </div>
     <script>
